Loading dos status das salas adicionado e event listener feito

--- a/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/src/css/dashboard.css
+++ b/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/src/css/dashboard.css
@@ -238,6 +238,18 @@ a {
     margin-left: 6px;
 }
 
+.loading {
+    display: none !important;
+}
+
+.loaded {
+    display: none !important;
+}
+
+.cyan-blue {
+    color: #42b7d8;
+}
+
 .page-salas .box-text .critico {
     color: darkred;
     margin-left: 6px;
