--- a/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/src/css/sala.css
+++ b/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/src/css/sala.css
@@ -4,7 +4,7 @@
 
 .graphics-orientation {
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,7 +13,7 @@
 .graphics-container {
     background-color: rgb(51, 51, 51);
     border-radius: 10px;
-    height: 95vh;
+    /* height: 95vh; */
     width: 90%;
     margin-left: 55px;
     display: flex;
@@ -30,8 +30,11 @@
     flex: 2;
     display: flex;
     align-items: center;
+    justify-content: center;
     margin: 2em;
     flex-direction: column;
+    height: auto;
+    max-height: 25em;
 }
 
 .panel .general-title h1 {
