lógica para aparecer os gráficos de acordo o tipo de dados

--- a/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/src/css/sala.css
+++ b/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/src/css/sala.css
@@ -107,3 +107,12 @@
 .round-color.ex-high {
     background-color: #d50606;
 }
+
+.blocked {
+    font-size: 253.7px;
+    color: #adadad;
+}
+
+.occult {
+    display: none !important;
+}
