--- a/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/src/css/dashboard.css
+++ b/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/src/css/dashboard.css
@@ -309,12 +309,13 @@ a {
     /* display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr; */
     display: flex;
-    width: 105%;
-    padding: 1em 4em;
+    width: 100%;
     align-items: center;
     justify-content: flex-start;
+    overflow: hidden;
     flex-flow: row wrap;
-    margin: 0 0 0 45px;
+    box-sizing: border-box;
+    padding: 0 0 0 45px;
     /* margin: 0 auto; */
 }
 
