--- a/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/src/css/dashboard.css
+++ b/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/src/css/dashboard.css
@@ -18,9 +18,12 @@
     --z-fixed: 100;
 }
 
+
 /*------------BASES------------*/
 
-*, ::before, ::after {
+*,
+ ::before,
+ ::after {
     box-sizing: border-box;
 }
 
@@ -53,7 +56,9 @@ a {
     text-decoration: none;
 }
 
+
 /*------------HEADER------------*/
+
 
 /* 
 .header {
@@ -90,6 +95,7 @@ a {
     width: 40px;
 }
 
+
 /*------------HEADER------------*/
 
 .l-navbar {
@@ -117,7 +123,8 @@ a {
     width: 25px;
 }
 
-.nav_logo, .nav_link {
+.nav_logo,
+.nav_link {
     display: grid;
     /*Torna o elemento um grid container.*/
     grid-template-columns: max-content max-content;
@@ -335,4 +342,8 @@ sub {
     font-family: var(--body-font);
     font-weight: 400 !important;
     font-size: 16px;
+}
+
+.invisible {
+    display: none !important;
 }
