Criando o cadastro de funcionário

--- a/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/src/css/dashboard.css
+++ b/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/src/css/dashboard.css
@@ -347,3 +347,12 @@ sub {
 .invisible {
     display: none !important;
 }
+
+.sign-resp-container{
+    display: flex;
+    justify-content: space-between;
+}
+
+.sign-resp-container > div{
+    margin: 0 10px;
+}
