--- a/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/src/css/dashboard.css
+++ b/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/src/css/dashboard.css
@@ -18,12 +18,9 @@
     --z-fixed: 100;
 }
 
-
 /*------------BASES------------*/
 
-*,
- ::before,
- ::after {
+*, ::before, ::after {
     box-sizing: border-box;
 }
 
@@ -56,9 +53,7 @@ a {
     text-decoration: none;
 }
 
-
 /*------------HEADER------------*/
-
 
 /* 
 .header {
@@ -95,7 +90,6 @@ a {
     width: 40px;
 }
 
-
 /*------------HEADER------------*/
 
 .l-navbar {
@@ -123,8 +117,7 @@ a {
     width: 25px;
 }
 
-.nav_logo,
-.nav_link {
+.nav_logo, .nav_link {
     display: grid;
     /*Torna o elemento um grid container.*/
     grid-template-columns: max-content max-content;
@@ -348,11 +341,62 @@ sub {
     display: none !important;
 }
 
-.sign-resp-container{
+.sign-resp-container {
     display: flex;
     justify-content: space-between;
 }
 
-.sign-resp-container > div{
+.sign-resp-container>div {
     margin: 0 10px;
+}
+
+.no-rooms {
+    width: 100%;
+    height: 80vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-left: 10px;
+}
+
+.no-rooms h1 {
+    background-color: #42b7d8;
+    border-radius: 10px;
+    width: 60%;
+    padding: 20px;
+}
+
+.no-rooms .add-btn {
+    position: absolute;
+    bottom: 0;
+    right: 25px;
+    font-size: 25px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    color: #fff;
+    width: 80px;
+    height: 80px;
+    transition: 1.5s;
+    background-color: #04befe;
+    animation: bounce 2.5s infinite;
+    -webkit-box-shadow: 10px 7px 33px 1px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 10px 7px 33px 1px rgba(0, 0, 0, 0.75);
+    box-shadow: 10px 7px 33px 1px rgba(0, 0, 0, 0.75);
+}
+
+.add-btn a {
+    color: #fff;
+}
+
+@keyframes bounce {
+    0%, 100% {
+        transform: translateY(0%);
+    }
+    50% {
+        transform: translateY(-20%);
+    }
 }
